# etf-quant

./: .gitignore  CLAUDE.md  LICENSE  README.md  ecosystem.config.cjs  pyproject.toml
api/: __init__.py  deps.py  main.py
api/routers/: __init__.py  backtest.py  data.py  factors.py  flow.py  portfolio.py  recommend.py  sector.py  sentiment.py  signals.py  system.py  websocket.py
config/: .env.example  constants.py  optimal_params.json  optimal_params.py  settings.py
data/: validators.py
data/cache/: __init__.py  redis_cache.py
data/collectors/: __init__.py  base.py  etf_hist.py  etf_spot.py  realtime.py
data/storage/: __init__.py  parquet_store.py
engine/: __init__.py  alerts.py  backtest.py  flow.py  metrics.py  pattern.py  portfolio_advisor.py  recommender.py  regime.py  risk_advisor.py  sector.py  sentiment.py  signal_backtest.py  signal_quality.py  signals.py  tracker.py  types.py  verdict.py  walkforward.py
engine/signals/: __init__.py  batch.py  generator.py  helpers.py  scoring.py  types.py
factors/: __init__.py  base.py  flow.py  momentum.py  value.py  volatility.py
scripts/: collect_daily.py  cron_daily.sh  dev.sh  factor_ic.py  param_sweep.py  record_signals.py  setup.sh  sweep_results.json  validate_signals.py
strategies/: __init__.py  balance.py  base.py  grid.py  multifactor.py  rotation.py
tests/integration/: test_collect_pipeline.py
tests/unit/: test_alerts.py  test_api.py  test_api_flow_risk.py  test_api_portfolio_factors.py  test_api_sentiment_sector.py  test_api_signals.py  test_api_warmup.py  test_backtest_helpers.py  test_backtest_types.py  test_balance_strategy.py  test_base_collector.py  test_collect_daily.py  test_engine.py  test_etf_collectors.py  test_factor_ic.py  (+30 more)
web/: next.config.ts  package-lock.json  package.json
(+41 files in other folders)
